Adicao de controle do processo da dll + builder configurado.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <p id="containerInfo" style="white-space: pre-line"></p>
       </div>
       <div class="col-md-3">
+        <button id="encerrarProcessoDll" class="btn btn-danger btn-block">Encerrar DLL</button>
         <button id="iniciarProcessamento" class="btn btn-primary btn-block">Analisar</button>
-        <div id="extensaoConexaoDll" class="mt-2">
+        <div id="extensaoConexaoDll" class="mt-2 mb-2">
         </div>
       </div>
     </div>
