--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>M.A.R.R.E.T.A.</title>
+    <title>M.A.R.R.E.T.A.E.</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
     <link rel="stylesheet" href="./style.css"></link>
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <div class="jumbotron text-center">
-      <h1>Bem vindo ao M.A.R.R.E.T.A.</h1>
-      <h4>Método Alternativo de Ratificação e Resolução Emergencial de Tarefas Abortadas para a Extensão</h4>
-    </div>
-    <div class="row col-md-12">
-      <div class="col-md-9">
-        <p id="containerInfo" style="white-space: pre-line"></p>
+    <div class="container-fluid">
+      <div class="row m-2">
+        <div class="col-sm-9 text-center header">
+          <h1>Bem vindo ao <strong>M.A.R.R.E.T.A.E.</strong></h1>
+          <h4>Método Alternativo de Ratificação e Resolução Emergencial de Tarefas Abortadas para a Extensão</h4>
+        </div>
+        <div class="col-sm-3">
+          <button id="encerrarProcessoDll" class="btn btn-danger btn-block">Encerrar DLL</button>
+          <button id="iniciarProcessoDll" class="btn btn-teal btn-block">Iniciar DLL</button>
+          <button id="iniciarProcessamento" class="btn btn-primary btn-block">Analisar</button>
+        </div>
       </div>
-      <div class="col-md-3">
-        <button id="encerrarProcessoDll" class="btn btn-danger btn-block">Encerrar DLL</button>
-        <button id="iniciarProcessamento" class="btn btn-primary btn-block">Analisar</button>
-        <div id="extensaoConexaoDll" class="mt-2 mb-2">
+      <div class="row m-2">
+        <div id="containerScroll" class="col-sm-9 divScroll">
+          <p id="containerInfo" style="white-space: pre-line;"></p>
+        </div>
+        <div id="extensaoConexaoDll" class="col-sm-3">
         </div>
       </div>
     </div>
